unpackaged/main/default/objects/Billing_Contact__c/Billing_Contact__c.object-meta.xml
<CustomObject>
    <description>The contacts who are identified as being primary billing contacts for an account</description>
    <label>Billing Contact</label>
    <nameField>
        <displayFormat>BC-{00000000}</displayFormat>
        <label>Billing Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>