unpackaged/main/default/objects/Billing_Contact__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Contacts</relationshipLabel>
    <relationshipName>Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>