unpackaged/main/default/objects/Billing_Contact__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipLabel>Billing Contacts</relationshipLabel>
    <relationshipName>Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>