unpackaged/main/default/objects/Billing_Contact__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <formula>Billing_Contact__r.OrderApi__Preferred_Email__c</formula>
    <label>Preferred Email</label>
    <type>Text</type>
</CustomField>