unpackaged/main/default/objects/Billing_Contact__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Billing Contacts</relationshipLabel>
    <relationshipName>Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>